# MorphoLLM

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_SETUP_COMMANDS.ps1  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: LATEX_REPOSITORY_BOX.tex  quickstart.md
examples/: basic_l2mt_demo.py  full_pipeline_demo.py  sm_mpc_control_demo.py
morphollm/: __init__.py
morphollm/algorithms/: __init__.py  l2mt.py  sm_mpc.py
morphollm/core/: __init__.py  extended_config_space.py  morphology_dynamics.py  stability_analysis.py
morphollm/models/: __init__.py  llm_interface.py
tests/: test_extended_config_space.py
