[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morphollm"
version = "0.1.0"
description = "Language-Guided Morphological Trajectory Synthesis for Adaptive Robotic Manipulators"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "H M Shujaat Zaheer", email = "shujabis@gmail.com"}
]
maintainers = [
    {name = "H M Shujaat Zaheer", email = "shujabis@gmail.com"}
]
keywords = [
    "robotics",
    "manipulation",
    "llm",
    "morphology",
    "control",
    "mpc",
    "trajectory",
    "deep-learning",
    "language-models",
    "adaptive-control"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "torch>=2.0.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]
simulation = [
    "mujoco>=3.0.0",
    "gymnasium>=0.29.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]
all = [
    "morphollm[dev,llm,simulation,docs]",
]

[project.urls]
Homepage = "https://github.com/hmshujaatzaheer/MorphoLLM"
Documentation = "https://github.com/hmshujaatzaheer/MorphoLLM#readme"
Repository = "https://github.com/hmshujaatzaheer/MorphoLLM.git"
Issues = "https://github.com/hmshujaatzaheer/MorphoLLM/issues"
Changelog = "https://github.com/hmshujaatzaheer/MorphoLLM/blob/main/CHANGELOG.md"

[project.scripts]
morphollm = "morphollm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["morphollm*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["morphollm"]
branch = true
omit = [
    "morphollm/__init__.py",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
